--- a/src/app/client-features/home/home.component.html
+++ b/src/app/client-features/home/home.component.html
@@ -10,8 +10,8 @@
   <!-- <div class="col-4"></div> -->
 </div>
 <div class="resume-grls">
-  <div *ngFor="let i of s" class="joder">
-    <mat-card class="example-card view overlay" [routerLink]="['/models/'+i]">
+  <div *ngFor="let model of this.models" class="joder">
+    <mat-card class="example-card view overlay" [routerLink]="['/models/'+model.id]">
       <!-- <mat-card-header> -->
       <!-- <div mat-card-avatar class="example-header-image"></div> -->
       <!-- <mat-card-title>Shiba Inu</mat-card-title> -->
@@ -20,7 +20,7 @@
       <!--Card image-->
 
       <!-- class="g-image image-fluid" -->
-      <img mat-card-image [src]="getImageUrl(i)" alt="Photo of a Shiba Inu">
+      <img mat-card-image [src]="getImageUrl(model.imgProfile.url)" alt="Photo of a Shiba Inu">
       <div class="mask rgba-white-light">.</div>
 
       <!-- <div class="g-image" mat-card-image> -->
@@ -30,9 +30,9 @@
 
       <!--Card content-->
       <mat-card-content>
-        <h3>Celete, <span>24</span></h3>
+        <h3>{{model.name}}, <span>{{model.age}}</span></h3>
         <p>
-          Celeste is your young dream girl...
+          {{model.shortDesc}}
         </p>
       </mat-card-content>
       <!-- <mat-card-actions>
@@ -41,11 +41,7 @@
     </mat-card-actions> -->
       <div class="desc">
         <h3>Creative</h3>
-        <mdc-list-divider></mdc-list-divider>
-        Celeste is your young dream girl... petite, sweet, smart, warm, sexy, and confident. She is the
-        beautiful and exotic woman with the friendly personality you have always hoped you would meet. Giving you
-        different experiences is Latesha favorite specialty! Her wonderful smile and amazing curves will make you happy
-        to have her as the perfect companion for any particular occasion!</div>
+        <mdc-list-divider></mdc-list-divider></div>
     </mat-card>
   </div>
 
