--- a/src/app/client-features/footer/footer.component.html
+++ b/src/app/client-features/footer/footer.component.html
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col-4"></div>
       <div class="col-4"></div>
-      <div class="col-4">
-        <button mat-raised-button color="accent" (click)="openDialog()">
+      <div class="col-4 justify-content-end">
+        <button mat-raised-button color="primary" (click)="openDialog()" class="login">
           <span><mat-icon matSuffix fontSet="fa" fontIcon="fa-address-card"></mat-icon>Login</span>
         </button>
         <i class="far fa-address-card"></i>
