--- a/src/app/client-features/footer/footer.component.scss
+++ b/src/app/client-features/footer/footer.component.scss
@@ -6,4 +6,12 @@
     height: 300px;
     background-color: #16171D;
     border-top: 2px solid orange;
+    .login{
+        height: 25px;
+        padding-right: 20px;
+        padding-left: 20px;
+        margin-top: 20px;
+        // background: orange;
+        // color: black;
+    }
 } 
