--- a/src/app/widgets/login-widget/login-widget.component.html
+++ b/src/app/widgets/login-widget/login-widget.component.html
@@ -1,15 +1,17 @@
 <h5>Login</h5>
+<form [formGroup]="form">
 <mat-form-field appearance="fill">
-    <input matInput placeholder="Username">
+    <input matInput placeholder="Username" formControlName="username">
     <mat-icon matSuffix fontSet="fa" fontIcon="fa-at"></mat-icon>
     <mat-hint></mat-hint>
 </mat-form-field>
 
 <mat-form-field appearance="fill">
-    <input matInput placeholder="Password">
+    <input matInput placeholder="Password" formControlName="password">
     <mat-icon matSuffix fontSet="fa" fontIcon="fa-key"></mat-icon>
     <mat-hint>Must be at least 6 characters</mat-hint>
 </mat-form-field>
+</form>
 <br />
 <a routerLink="['/']">You don't have an account register here</a>
 <br />
