--- a/src/app/client-features/footer/footer.component.html
+++ b/src/app/client-features/footer/footer.component.html
@@ -7,6 +7,7 @@
         <button mat-raised-button color="primary" (click)="openDialog()" class="login">
           <span><mat-icon matSuffix fontSet="fa" fontIcon="fa-address-card"></mat-icon>Login</span>
         </button>
+        <button (click)='logOut()'>logout</button>
         <i class="far fa-address-card"></i>
       </div>
     </div>
