--- a/src/app/client-features/footer/footer.component.html
+++ b/src/app/client-features/footer/footer.component.html
@@ -4,11 +4,16 @@
       <div class="col-4"></div>
       <div class="col-4"></div>
       <div class="col-4 justify-content-end">
-        <button mat-raised-button color="primary" (click)="openDialog()" class="login">
+        <button mat-raised-button color="primary" (click)="openDialog()" class="login" *ngIf="!authService.isAuthorizedUser" >
           <span><mat-icon matSuffix fontSet="fa" fontIcon="fa-address-card"></mat-icon>Login</span>
         </button>
-        <button (click)='logOut()'>logout</button>
-        <i class="far fa-address-card"></i>
+        <button (click)='logOut()' *ngIf="authService.isAuthorizedUser" mat-raised-button color="accent" class="logout">
+          <!-- <mat-icon matSuffix fontSet="fa" fontIcon="fa-address-card"></mat-icon> -->
+           logout -
+
+           {{ authService.user.username }}
+        </button>
+        
       </div>
     </div>
   </div>
