--- a/src/app/client-features/footer/footer.component.scss
+++ b/src/app/client-features/footer/footer.component.scss
@@ -6,12 +6,17 @@
     height: 300px;
     background-color: #16171D;
     border-top: 2px solid orange;
-    .login{
+    text-align: right;
+    .login, .logout{
+        display: inline-block;
         height: 25px;
         padding-right: 20px;
         padding-left: 20px;
         margin-top: 20px;
         // background: orange;
         // color: black;
+    }
+    .logout{
+        margin-left: 5px;
     }
 } 
