--- a/src/app/widgets/login-widget/login-widget.component.html
+++ b/src/app/widgets/login-widget/login-widget.component.html
@@ -1,18 +1,24 @@
 <h5>Login</h5>
 <form [formGroup]="form">
-<mat-form-field appearance="fill">
-    <input matInput placeholder="Username" formControlName="username">
-    <mat-icon matSuffix fontSet="fa" fontIcon="fa-at"></mat-icon>
-    <mat-hint></mat-hint>
-</mat-form-field>
+    <mat-form-field appearance="fill">
+        <input matInput placeholder="Username" formControlName="username">
+        <mat-icon matSuffix fontSet="fa" fontIcon="fa-at"></mat-icon>
+        <mat-hint></mat-hint>
+    </mat-form-field>
 
-<mat-form-field appearance="fill">
-    <input matInput placeholder="Password" formControlName="password">
-    <mat-icon matSuffix fontSet="fa" fontIcon="fa-key"></mat-icon>
-    <mat-hint>Must be at least 6 characters</mat-hint>
-</mat-form-field>
+    <mat-form-field appearance="fill">
+        <input matInput placeholder="Password" formControlName="password" type="password">
+        <mat-icon matSuffix fontSet="fa" fontIcon="fa-key"></mat-icon>
+        <mat-hint>Must be at least 6 characters</mat-hint>
+    </mat-form-field>
 </form>
-<br />
-<a routerLink="['/']">You don't have an account register here</a>
-<br />
-<a routerLink="['/']">Forgot your password</a>
+<div class="login-links">
+    <a class="login-link" routerLink="['/']">You don't have an account register here</a>
+    <br />
+    <a class="login-link" routerLink="['/']">Forgot your password</a>
+</div>
+<button mat-raised-button color="primary" (click)="login()" class="login" *ngIf="!authService.isAuthorizedUser">
+    <span>
+        <mat-icon matSuffix fontSet="fa" fontIcon="fa-address-card"></mat-icon>Login
+    </span>
+</button>
