--- a/src/app/client-features/home/home.component.scss
+++ b/src/app/client-features/home/home.component.scss
@@ -51,6 +51,7 @@
         background-size: cover;
     }
     .example-card{ //rename 
+        cursor: pointer;
         .desc{
             opacity: 0;
             display: block;
@@ -67,26 +68,26 @@
             // transition-delay: 1s;
             
         }
-        &:hover .desc{
-            display: block;
-            // background: white;
-            opacity: 1;
-            top: 50%;
-            padding: 15px;
-            &:before{
-                content: '';
-                width: 100%;
-                height: 50px;
-                left: 0;
-                position: absolute;
-                top: -50px;
-                background: -moz-linear-gradient(top,  rgba(30,87,153,0) 0%, rgba(255,255,255,0.99) 99%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top,  rgba(30,87,153,0) 0%,rgba(255,255,255,0.99) 99%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-                background: linear-gradient(to bottom,  rgba(30,87,153,0) 0%,rgba(255,255,255,0.99) 99%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-            }
+        // &:hover .desc{
+        //     display: block;
+        //     // background: white;
+        //     opacity: 1;
+        //     top: 50%;
+        //     padding: 15px;
+        //     &:before{
+        //         content: '';
+        //         width: 100%;
+        //         height: 50px;
+        //         left: 0;
+        //         position: absolute;
+        //         top: -50px;
+        //         background: -moz-linear-gradient(top,  rgba(30,87,153,0) 0%, rgba(255,255,255,0.99) 99%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+        //         background: -webkit-linear-gradient(top,  rgba(30,87,153,0) 0%,rgba(255,255,255,0.99) 99%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        //         background: linear-gradient(to bottom,  rgba(30,87,153,0) 0%,rgba(255,255,255,0.99) 99%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        //         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+        //     }
             
-        }
+        // }
     }
     mat-card-content{
         h3{
