--- a/src/app/client-features/pages/booking/booking.component.scss
+++ b/src/app/client-features/pages/booking/booking.component.scss
@@ -2,13 +2,14 @@
 .booking-card{
     display: flex;
     flex-direction: column;
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
+    padding-bottom: 0!important;
     mat-card-content{
         display: flex;
         flex-direction: row;
         height: 200px;
         .book-thumbnail{
-            width: 200px;
+            width: 300px;
             height: auto;
             margin: 0;
             margin-left: -16px;
