--- a/src/app/dialog/wizard-dialog/wizard-dialog.component.html
+++ b/src/app/dialog/wizard-dialog/wizard-dialog.component.html
@@ -1,2 +1,2 @@
-<app-wizard-widget></app-wizard-widget>
+<app-wizard-widget [data]="data"></app-wizard-widget>
 <button mat-button (click)="onNoClick()">Exit</button>
