--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,13 @@ strong{
 // #fff
 
 // peqenos tonos del primario alrededor d ela pagina para enfasis mamey
+
+.carousel-indicators{
+    z-index: 1000;
+}
+
+
+// enable
+// .book-card .mat-content{
+//     display: block;
+// }
