--- a/src/app/widgets/wizard-widget/wizard-widget.component.html
+++ b/src/app/widgets/wizard-widget/wizard-widget.component.html
@@ -4,38 +4,39 @@
         <form [formGroup]="firstFormGroup">
             <!-- title tab -->
             <ng-template matStepLabel>Fill Your Dates</ng-template>
-
-            <div class="row">
-                <div class="col-2">
-                    <mat-form-field color="accent" appearance="fill">
-                        <mat-label>Check In</mat-label>
-                        <!-- openedStream -->
-                        <!-- 3 days in advance -->
-                        <input matInput [matDatepicker]="picker1" formControlName="data.params.chin"
-                            [max]="data.params.chon">
-                        <mat-datepicker-toggle matSuffix [for]="picker1" matTooltip="Book with 3 days in advance">
-                        </mat-datepicker-toggle>
-                        <mat-datepicker #picker1></mat-datepicker>
-                    </mat-form-field>
+            <div class="wizard-content">
+                <div class="row">
+                    <div class="col-2">
+                        <mat-form-field color="accent" appearance="fill">
+                            <mat-label>Check In</mat-label>
+                            <!-- openedStream -->
+                            <!-- 3 days in advance -->
+                            <input matInput [matDatepicker]="picker1" formControlName="chin"
+                                [max]="params.chon">
+                            <mat-datepicker-toggle matSuffix [for]="picker1" matTooltip="Book with 3 days in advance">
+                            </mat-datepicker-toggle>
+                            <mat-datepicker #picker1></mat-datepicker>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-2">
+                        <mat-form-field color="accent" appearance="fill">
+                            <mat-label>Check out</mat-label>
+                            <input matInput [matDatepicker]="picker2" formControlName="chon"
+                                [min]="params.chin">
+                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                            <mat-datepicker #picker2 color="primary"></mat-datepicker>
+                        </mat-form-field>
+                    </div>
                 </div>
-                <div class="col-2">
-                    <mat-form-field color="accent" appearance="fill">
-                        <mat-label>Check out</mat-label>
-                        <input matInput [matDatepicker]="picker2" formControlName="data.params.chon"
-                            [min]="data.params.chin">
-                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                        <mat-datepicker #picker2 color="primary"></mat-datepicker>
-                    </mat-form-field>
+                <div class="err"> {{dateMessage}}</div>
+
+                <h6 class="title-nfasis"><span class="underline">Choosen Package</span></h6>
+                <app-book-card-package [package]="data.package" [expanded]="true" class="package" [normalState]="true">
+                </app-book-card-package>
+
+                <div>
+                    <button mat-button matStepperNext>Next</button>
                 </div>
-            </div>
-            <div class="err"> {{dateMessage}}</div>
-
-            <h6 class="title-nfasis"><span class="underline">Choosen Package</span></h6>
-            <app-book-card-package [package]="data.package" [expanded]="true" class="package" [normalState]="true">
-            </app-book-card-package>
-
-            <div>
-                <button mat-button matStepperNext>Next</button>
             </div>
         </form>
 
