--- a/src/app/widgets/booking-widget/booking-widget.component.html
+++ b/src/app/widgets/booking-widget/booking-widget.component.html
@@ -1,4 +1,4 @@
-<div class="booking-widget amdc-all">
+<div class="booking-widget amdc-all" *ngIf="showWidget">
     <div class="content">
         <mat-card class="card">
             <div class="b-card-content">
