--- a/src/app/client-features/home/home.component.html
+++ b/src/app/client-features/home/home.component.html
@@ -10,40 +10,5 @@
   </div>
   <!-- <div class="col-4"></div> -->
 </div>
-<div class="resume-grls">
-  <div *ngFor="let model of this.models" class="joder">
-    <mat-card class="example-card view overlay" [routerLink]="['/models/'+model.id]">
-      <!-- <mat-card-header> -->
-      <!-- <div mat-card-avatar class="example-header-image"></div> -->
-      <!-- <mat-card-title>Shiba Inu</mat-card-title> -->
-      <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
-      <!-- </mat-card-header> -->
-      <!--Card image-->
-
-      <!-- class="g-image image-fluid" -->
-      <img mat-card-image [src]="getImageUrl(model.imgProfile?.url)" alt="Photo of a Shiba Inu">
-      <div class="mask rgba-white-light">.</div>
-
-      <!-- <div class="g-image" mat-card-image> -->
-      <!-- class="g-image image-fluid"  -->
-      <!-- <img  [src]="getImageUrl(i)" alt="Photo of a Shiba Inu"> -->
-      <!-- </div>  -->
-
-      <!--Card content-->
-      <mat-card-content>
-        <h3>{{model.name}}, <span>{{model.age}}</span></h3>
-        <p>
-          {{model.shortDesc}}
-        </p>
-      </mat-card-content>
-      <!-- <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions> -->
-      <div class="desc">
-        <h3>Creative</h3>
-        <mdc-list-divider></mdc-list-divider></div>
-    </mat-card>
-  </div>
-
-</div>
+<app-model-list-widget [models]="models"></app-model-list-widget>
+<button mat-raised-button color="primary" [routerLink]="'/gallery'" class="show-models">Show all uplaymates</button>
