--- a/src/app/client-features/home/home.component.scss
+++ b/src/app/client-features/home/home.component.scss
@@ -9,89 +9,95 @@
     display: block;
 }
 
-.resume-grls{
-    margin-bottom: 45px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    justify-items: flex-start;
-    @include media-breakpoint-up(md){     
-        justify-content: space-evenly;
-    }
-    @include media-breakpoint-up(lg){     
-        flex-grow: 2;
-    }
-    @include media-breakpoint-up(xl){     
-        justify-content: space-between;
-    }
-    .card, .example-card{
-        width: 350px;
-        margin-top: 40px;
-        // box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2); card border soon
-        // border-radius: .5rem!important;
-        // border-top-left-radius: 0.5rem !important;
-        // border-top-right-radius: 0.5rem !important;
-        // border-bottom-right-radius: 0.5rem !important;
-        // border-bottom-
-        .g-image{
-            position: relative;
-            height: 350px;
-            overflow: hidden;
-            img{
-                position: absolute;
-                left: transformX(-50%);
-                top: transformY(-50%);
-                width: 100%;
-            }
-        }
-
-    }
-    .example-header-image {
-        background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-        background-size: cover;
-    }
-    .example-card{ //rename 
-        cursor: pointer;
-        .desc{
-            opacity: 0;
-            display: block;
-            left: 0;
-            z-index: 1300;
-            background-color: white;
-            height: 100%;
-            width: 100%;
-            top: 100%;
-            position: absolute;
-            transition: top 0.5s, opacity 0.5s;
-            // transition-duration: 2s;
-            transition-timing-function: ease;
-            // transition-delay: 1s;
-            
-        }
-        // &:hover .desc{
-        //     display: block;
-        //     // background: white;
-        //     opacity: 1;
-        //     top: 50%;
-        //     padding: 15px;
-        //     &:before{
-        //         content: '';
-        //         width: 100%;
-        //         height: 50px;
-        //         left: 0;
-        //         position: absolute;
-        //         top: -50px;
-        //         background: -moz-linear-gradient(top,  rgba(30,87,153,0) 0%, rgba(255,255,255,0.99) 99%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
-        //         background: -webkit-linear-gradient(top,  rgba(30,87,153,0) 0%,rgba(255,255,255,0.99) 99%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-        //         background: linear-gradient(to bottom,  rgba(30,87,153,0) 0%,rgba(255,255,255,0.99) 99%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        //         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-        //     }
-            
-        // }
-    }
-    mat-card-content{
-        h3{
-            text-transform: capitalize;
-        }
-    }
+.show-models{
+    margin: 0 auto;
+    border-radius: 5px;
+    height: 50px;
 }
+
+// .resume-grls{
+//     margin-bottom: 45px;
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: center;
+//     justify-items: flex-start;
+//     @include media-breakpoint-up(md){     
+//         justify-content: space-evenly;
+//     }
+//     @include media-breakpoint-up(lg){     
+//         flex-grow: 2;
+//     }
+//     @include media-breakpoint-up(xl){     
+//         justify-content: space-between;
+//     }
+//     .card, .example-card{
+//         width: 350px;
+//         margin-top: 40px;
+//         // box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2); card border soon
+//         // border-radius: .5rem!important;
+//         // border-top-left-radius: 0.5rem !important;
+//         // border-top-right-radius: 0.5rem !important;
+//         // border-bottom-right-radius: 0.5rem !important;
+//         // border-bottom-
+//         .g-image{
+//             position: relative;
+//             height: 350px;
+//             overflow: hidden;
+//             img{
+//                 position: absolute;
+//                 left: transformX(-50%);
+//                 top: transformY(-50%);
+//                 width: 100%;
+//             }
+//         }
+
+//     }
+//     .example-header-image {
+//         background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+//         background-size: cover;
+//     }
+//     .example-card{ //rename 
+//         cursor: pointer;
+//         .desc{
+//             opacity: 0;
+//             display: block;
+//             left: 0;
+//             z-index: 1300;
+//             background-color: white;
+//             height: 100%;
+//             width: 100%;
+//             top: 100%;
+//             position: absolute;
+//             transition: top 0.5s, opacity 0.5s;
+//             // transition-duration: 2s;
+//             transition-timing-function: ease;
+//             // transition-delay: 1s;
+            
+//         }
+//         // &:hover .desc{
+//         //     display: block;
+//         //     // background: white;
+//         //     opacity: 1;
+//         //     top: 50%;
+//         //     padding: 15px;
+//         //     &:before{
+//         //         content: '';
+//         //         width: 100%;
+//         //         height: 50px;
+//         //         left: 0;
+//         //         position: absolute;
+//         //         top: -50px;
+//         //         background: -moz-linear-gradient(top,  rgba(30,87,153,0) 0%, rgba(255,255,255,0.99) 99%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+//         //         background: -webkit-linear-gradient(top,  rgba(30,87,153,0) 0%,rgba(255,255,255,0.99) 99%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+//         //         background: linear-gradient(to bottom,  rgba(30,87,153,0) 0%,rgba(255,255,255,0.99) 99%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//         //         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+//         //     }
+            
+//         // }
+//     }
+//     mat-card-content{
+//         h3{
+//             text-transform: capitalize;
+//         }
+//     }
+// }
