--- a/src/app/client-features/pages/gallery/gallery.component.html
+++ b/src/app/client-features/pages/gallery/gallery.component.html
@@ -1,4 +1,5 @@
 <h1 class="title-nfasis"><span class="underline">Gall</span>ery</h1>
 <div class="d-flex justify-content-center">
-    <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class=""></ngx-gallery>
+    <!-- <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class=""></ngx-gallery> -->
+    <app-model-list-widget [models]="models"></app-model-list-widget>
 </div>
