--- a/src/app/client-features/silder/silder.component.html
+++ b/src/app/client-features/silder/silder.component.html
@@ -1,20 +1,23 @@
 <!-- <app-booking-widget></app-booking-widget> -->
 <div class="slider">
-    <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
-        <mdb-carousel-item *ngFor="let image of images"> 
-          <div class="view w-100">
-            <div class="d-block w-100" [style.backgroundImage]="'url('+environment.apiUrl+'/'+image.image.url+')'" class="slide-image"></div>
-            <div class="mask  waves-light" mdbWavesEffect></div>
-            <!-- rgba-black-light -->
-          </div>
-          <div class="carousel-caption">
-            <h3 class="h3-responsive">{{image.title}}</h3>
-            <p>{{image.caption}}</p>
-          </div>
-        </mdb-carousel-item>
-        
-      </mdb-carousel>
-      <app-booking-widget></app-booking-widget>
+  <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
+    <mdb-carousel-item *ngFor="let image of images">
+      <!-- <ng-contaier *ngIf="image.enable"> -->
+        <div class="view w-100">
+          <div class="d-block w-100" [style.backgroundImage]="'url('+environment.apiUrl+'/'+image.image.url+')'"
+            class="slide-image"></div>
+          <div class="mask  waves-light" mdbWavesEffect></div>
+          <!-- rgba-black-light -->
+        </div>
+        <div class="carousel-caption">
+          <h3 class="h3-responsive">{{image.title}}</h3>
+          <p>{{image.caption}}</p>
+        </div>
+      <!-- </ng-contaier> -->
+    </mdb-carousel-item>
+
+  </mdb-carousel>
+  <app-booking-widget></app-booking-widget>
 </div>
 
 <!-- <div class="slider">
