--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,3 +74,7 @@ strong{
 // .book-card .mat-content{
 //     display: block;
 // }
+
+.transparent-wizard .mat-dialog-container{
+    background: transparent;
+}
