--- a/src/app/client-features/packages/packages.component.scss
+++ b/src/app/client-features/packages/packages.component.scss
@@ -5,36 +5,8 @@
     flex-wrap: wrap;
 }
 
-.package{
-    max-width: 300px;
-    width: 100%;
-    margin-bottom: 30px;
-    mat-card-header{
-        margin: -16px -16px 0 -16px;
-        padding: 16px;
-        background: #795548; //move to broze class 
-    }
-    &.famous{
-        // padding: 0px;
-        margin-left: 2px;
-        margin-right: 2px;
-        mat-card-header{
-            background: orange;
-        }
-    }
-    &.luxury{
-        mat-card-header{
-            background: #ff4081; // refactor using material variables or refactoring to become a material component
-            background: #03A9F4; // refactor using material variables or refactoring to become a material component
-            // #2196F3
-        }
-    }
-    mat-card-actions{
-        display: flex;
-        justify-content: center;
-    }
-    a{
-        color: orange;
-        display: contents;
-    }
-}
+
+// app-package-widget{
+//     max-width: 300px;
+//     width: 100%;
+// }
