--- a/src/app/client-features/home/home.component.scss
+++ b/src/app/client-features/home/home.component.scss
@@ -15,6 +15,10 @@
     height: 50px;
 }
 
+app-model-list-widget{
+    display: none;
+}
+
 // .resume-grls{
 //     margin-bottom: 45px;
 //     display: flex;
