--- a/src/app/widgets/model-list-widget/model-list-widget.component.scss
+++ b/src/app/widgets/model-list-widget/model-list-widget.component.scss
@@ -26,6 +26,9 @@
         // border-top-right-radius: 0.5rem !important;
         // border-bottom-right-radius: 0.5rem !important;
         // border-bottom-
+        // .mat-card-image{
+        //     height: 420px;
+        // }
         .g-image{
             position: relative;
             height: 350px;
@@ -87,4 +90,8 @@
             text-transform: capitalize;
         }
     }
+}
+
+.card-wrapper{
+    // height: 350px;
 }
