--- a/src/app/widgets/book-card-package/book-card-package.component.html
+++ b/src/app/widgets/book-card-package/book-card-package.component.html
@@ -47,7 +47,7 @@
                             <div class="col">
                                 <span matTooltip="{{maxPeopleDesc(package.pax * 2)}}">
                                     <mat-icon>people</mat-icon>&nbsp;
-                                    <b>{{package.pax * 2}} People Max</b>
+                                    <b>{{package.pax }} People Max</b>
                                 </span>
                             </div>
                             <div class="col">
@@ -85,8 +85,8 @@
 
                         </div>
                         <mat-divider></mat-divider>
-                        <p>
-                            {{package.accommodation.shortDesc}}
+                        <p class="desc-scroll">
+                            {{package.description}}
                         </p>
                     </div>
                     <mat-card-actions class="d-flex justify-content-end">
