--- a/src/app/widgets/book-card-package/book-card-package.component.scss
+++ b/src/app/widgets/book-card-package/book-card-package.component.scss
@@ -90,3 +90,25 @@ mat-expansion-panel-header{
 }
 
 // border-bottom: 3px solid springgreen;
+
+.desc-scroll{
+    height: 84px;
+    overflow: scroll;
+    padding-top: 0;
+    margin-top: 10px;
+    background: transparent;
+}
+
+.desc-scroll::-webkit-scrollbar {
+    width: 12px;
+}
+
+.desc-scroll::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+
+.desc-scroll::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
