--- a/src/app/widgets/package-widget/package-widget.component.html
+++ b/src/app/widgets/package-widget/package-widget.component.html
@@ -4,7 +4,7 @@
             <mat-card-title>{{data?.name}}</mat-card-title>
             <mat-card-subtitle>3 days 2 Nights ${{(data?.total / data?.nights)}}/Night</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="http://localhost:1337{{data?.image?.url}}" alt="Photo of a Shiba Inu" height="200px">
+        <img mat-card-image src="{{enviroment.apiUrl}}{{data?.image?.url}}" alt="Photo of a Shiba Inu" height="200px">
         <mat-card-content>
             <p>
                 The Best Sex Vacation Package In The World.
